--- a/style.css
+++ b/style.css
@@ -99,12 +99,19 @@ p {
 
 /* Navbar */
 #navbar {
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  background-color: var(--color-pink);
+  background-color: transparent;
   align-items: center;
-  color: var(--color-white);
+  transition: all var(--animation-duration) ease-in-out;
   padding: 16px;
+}
+
+#navbar.navbar--dark{
+  background-color: var(--color-pink);
+  padding: 8px;
 }
 
 .navbar__menu {
@@ -114,6 +121,7 @@ p {
 .navbar__logo {
   font-size: var(--font-medium);
   font-weight: var(--weight-semi-bold);
+  color: var(--color-white);
 }
 
 .navbar__menu__item {
@@ -121,6 +129,7 @@ p {
   margin: 0 4px;
   cursor: pointer;
   border-radius: var(--size-border-radius);
+  color: var(--color-white);
 }
 
 .navbar__menu__item.active {
@@ -131,11 +140,20 @@ p {
   background-color: var(--color-dark-pink);
 }
 
+.navbar__toggle-btn{
+  position: absolute;
+  top: 24px;
+  right: 32px;
+  font-size: 24px;
+  color: var(--color-white);
+  display: none;
+}
 /* Home */
 #home {
   background: url("imgs/homebackground-200515-154505.png") center/cover
     no-repeat;
   padding: 40px;
+  padding-top: 120px;
   text-align: center;
 }
 
@@ -455,4 +473,43 @@ p {
   transform: scale(1.1);
   color: var(--color-yellow);
   transition: var(--animation-duration) ease-in;
+}
+
+/* For below 768px screen width */
+@media screen and (max-width:768px){
+  .navbar__toggle-btn{
+    display: block;
+  }
+  #navbar{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar__menu{
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    display: none;
+  }
+
+  .about__majors{
+    flex-direction: column;
+  }
+
+  .major {
+    margin-bottom: 38px;
+  }
+
+  .skillset{
+    flex-direction: column;
+  }
+
+  .project {
+    flex-grow: 1;
+  }
+
+  .testimonial__avatar{
+    width: 80px;
+    height: 80px;
+  }
 }
