JS: Navbar menu toggle + project UI tweak

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ p {
   padding: 16px;
 }
 
-#navbar.navbar--dark{
+#navbar.navbar--dark {
   background-color: var(--color-pink);
   padding: 8px;
   z-index: 1;
@@ -140,7 +140,7 @@ p {
   background-color: var(--color-dark-pink);
 }
 
-.navbar__toggle-btn{
+.navbar__toggle-btn {
   position: absolute;
   top: 24px;
   right: 32px;
@@ -313,7 +313,7 @@ p {
 
 /* Work */
 
-.work__categories{
+.work__categories {
   margin: 40px;
 }
 .category__btn {
@@ -398,33 +398,33 @@ p {
   transition: all var(--animation-duration) ease-in;
 }
 
-.project:hover .project__description{
+.project:hover .project__description {
   opacity: 0.8;
   transform: translateY(0px);
 }
 
 .project__description h3 {
-  color: var(--color-white);
+  color: var(--color-orange);
 }
 
-.project__description h3:after{
-  content '';
+.project__description h3:after {
+  content: "";
   display: block;
   position: relative;
-  left:50%;
-  width: 25px;
+  left: 50%;
+  width: 50px;
   height: 2px;
-  margin-left: -12px;
+  transform: translateX(-50%);
   margin-top: 8px;
   background-color: var(--color-dark-white);
 }
 
 /* Testimonial */
-#testimonials{
+#testimonials {
   background-color: var(--color-light-white);
 }
 
-.testimonials{
+.testimonials {
   margin: 40px;
 }
 
@@ -433,54 +433,56 @@ p {
   margin: 32px 0;
 }
 
-.testimonial__avatar{
+.testimonial__avatar {
   width: 150px;
   height: 150px;
   border-radius: 50%;
   aspect-ratio: 1;
 }
 
-.testimonial__avatar:nth-child(odd){
+.testimonial__avatar:nth-child(odd) {
   margin-right: 40px;
 }
 
-.testimonial__avatar:nth-child(even){
+.testimonial__avatar:nth-child(even) {
   margin-left: 40px;
 }
 
-.testimonial__speech-bubble{
+.testimonial__speech-bubble {
   padding: 18px;
   background-color: var(--color-white);
   border-radius: var(--size-border-radius);
 }
 
-.testimonial__speech-bubble p{
+.testimonial__speech-bubble p {
   color: var(--color-light-grey);
 }
 
-.testimonial__speech-bubble a{
+.testimonial__speech-bubble a {
   color: var(--color-pink);
 }
 
 /* Contact */
-#contact{
+#contact {
   background-color: var(--color-pink);
 }
 
-.contact__title, .contact__email, .contact__rights{
-  color:var(--color-white);
+.contact__title,
+.contact__email,
+.contact__rights {
+  color: var(--color-white);
 }
 
-.contact__title{
+.contact__title {
   margin: 32px 0;
 }
 
-.contact__links{
+.contact__links {
   font-size: var(--font-large);
   margin: 24px 0;
 }
 
-.contact__links i:hover{
+.contact__links i:hover {
   transform: scale(1.1);
   color: var(--color-yellow);
   transition: var(--animation-duration) ease-in;
@@ -488,7 +490,7 @@ p {
 
 /* Scroll */
 .arrow-up {
-  position:fixed;
+  position: fixed;
   bottom: 50px;
   right: 50px;
   width: 70px;
@@ -508,23 +510,32 @@ p {
 }
 
 /* For below 768px screen width */
-@media screen and (max-width:768px){
-  .navbar__toggle-btn{
+@media screen and (max-width: 768px) {
+  .navbar__toggle-btn {
     display: block;
   }
-  #navbar{
+  #navbar {
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--color-pink);
   }
 
-  .navbar__menu{
+  #navbar.navbar--dark {
+    padding: 16px;
+  }
+
+  .navbar__menu {
     flex-direction: column;
     text-align: center;
     width: 100%;
     display: none;
   }
 
-  .about__majors{
+  .navbar__menu.open {
+    display: block;
+  }
+
+  .about__majors {
     flex-direction: column;
   }
 
@@ -532,7 +543,7 @@ p {
     margin-bottom: 38px;
   }
 
-  .skillset{
+  .skillset {
     flex-direction: column;
   }
 
@@ -540,7 +551,7 @@ p {
     flex-grow: 1;
   }
 
-  .testimonial__avatar{
+  .testimonial__avatar {
     width: 80px;
     height: 80px;
   }
