--- a/style.css
+++ b/style.css
@@ -131,8 +131,11 @@ p {
   margin: 0 4px;
   cursor: pointer;
   color: var(--color-white);
-  border: 1px solid transparent;
   border-radius: var(--size-border-radius);
+}
+
+.navbar__menu__item.active {
+  border: 1px solid var(--color-white);
 }
 
 .navbar__menu__item:hover {
